--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </style>
   </head>
   <body>
-  	<div id="intro"><p>Let's start a website!</p></div>
+  	<div id="intro"><p>Let's start a website!</p>
+      <p>And another beautiful paragraph.</p></div>
   </body>
 </html>
