changes in the index file

--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
     	font-family: "Roboto+Condensed", Sans-Serif;
     	font-weight: 300;
     	color: grey;
+      margin-top: 6em;
+      margin-left: 6em;
     }
+
+    #red {
+      color: crimson
+    }
+
     </style>
   </head>
   <body>
+    <h1>Headline goes here</h1>
   	<div id="intro"><p>Let's start a website!</p>
-      <p>And another beautiful paragraph.</p></div>
+      <p>And another beautiful paragraph.</p>
+      <p id="red">Now it's getting serious: I'm ready to ship my pull request.</p></div>
   </body>
 </html>
